--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "You cannot specify different emails",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "You cannot specify different phones",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Please fill in the required fields",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "To be able to log in with your phone number, you must log in to your account using a verified email",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "To be able to log in with your email, you must log in to your account using a verified phone number",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Invalid token",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Unable to find user with specified phone",
@@ -1426,23 +1426,34 @@
   "news.filed.shareNews.button": "Send news",
   "news.initialOrganizationNewsItem.body": "The property management company [name of the PMC] is pleased to welcome you to the Doma app!\nEvery day, we work to ensure your life in the building is comfortable. Our staff is ready to promptly address any questions regarding the maintenance of the building, its surrounding area, and the operations of the property management company.\n\nHow to reach us:\n1. Submit a ticket through the mobile app: you can do this in the «Tickets» section.\n2. Call the emergency dispatch service number: +7 000 000 0000 — operates 24/7.\n3. Call the property management office: +7 000 000 0000 — we operate [OFFICE HOURS].\n4. Visit the property management office: [OFFICE ADDRESS AND HOURS OF OPERATION].\n\nIn the app, we will share important news with you. Thank you for choosing us ❤️",
   "news.initialOrganizationNewsItem.title": "Management company letter 📩",
-  "news.template.category.cleaning": "\uD83E\uDDF9 Cleaning",
-  "news.template.category.electricity": "\uD83D\uDCA1 Electricity",
-  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricity and elevators",
-  "news.template.category.elevators": "\uD83D\uDED7 Elevators",
-  "news.template.category.gas": "♨\uFE0F Gas",
-  "news.template.category.heating": "\uD83C\uDF21\uFE0F Heating",
-  "news.template.category.intercom": "\uD83D\uDD22 Intercom",
-  "news.template.category.meters": "⏱\uFE0F Meters",
-  "news.template.category.other": "\uD83C\uDFE0 Other",
-  "news.template.category.snow": "❄\uFE0F Snow",
-  "news.template.category.telephone": "\uD83D\uDCDE Telephone",
-  "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
-  "news.template.category.water": "\uD83D\uDCA7 Water",
-  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
+  "news.template.category.cleaning": "🧹 Cleaning",
+  "news.template.category.electricity": "💡 Electricity",
+  "news.template.category.electricityAndElevators": "💡 Electricity and elevators",
+  "news.template.category.elevators": "🛗 Elevators",
+  "news.template.category.fireProtection": "👨🏻 Противопожарное",
+  "news.template.category.gas": "♨️ Gas",
+  "news.template.category.heating": "🌡️ Heating",
+  "news.template.category.intercom": "🔢 Intercom",
+  "news.template.category.meters": "⏱️ Meters",
+  "news.template.category.other": "🏠 Other",
+  "news.template.category.snow": "❄️ Snow",
+  "news.template.category.telephone": "📞 Telephone",
+  "news.template.category.utilities": "💡 All utilities",
+  "news.template.category.water": "💧 Water",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
+  "notification.UserMessagesList.emptyList": "No notifications yet",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "New pass ticket",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "New ticket comment",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "New ticket",
+  "notification.UserMessagesList.newMessagePageTitle": "New notification",
+  "notification.UserMessagesList.title": "Notifications",
+  "notification.UserMessagesList.viewed": "Viewed",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "About new pass tickets",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "About new ticket comments",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "About new tickets",
+  "notification.UserMessagesSettingModal.title": "What kind of notifications do you want to see?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
@@ -1497,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "It's time to update 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Open pass",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
@@ -1769,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "Page removed or never existed",
   "pages.condo.error.NotFoundTitle": "Page not found",
   "pages.condo.error.PageTitle": "Improving service",
-  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
   "pages.condo.error.TooManyRequestsDescription": "There are too many requests from your IP address, so we have restricted access. It will automatically be restored in {resetTime}. Please wait.",
   "pages.condo.error.TooManyRequestsErrorCode": "If access is not restored, contact technical support and report the error code - 429.",
+  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
