--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "No puedes especificar correos electrónicos diferentes",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "No puede especificar diferentes teléfonos",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Token no válido",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "No se pudo completar la operación",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Por favor, complete los campos obligatorios",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Para poder iniciar sesión con su número de teléfono, debe iniciar sesión en su cuenta utilizando un correo electrónico verificado.",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Para poder iniciar sesión con tu correo electrónico, debes iniciar sesión en tu cuenta utilizando un número de teléfono verificado",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Token no válido",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "No se pudo completar la operación",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Teléfono o contraseña incorrectos",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "No se ha encontrado un token de cambio de contraseña válido",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "No se ha podido encontrar un usuario con el número de teléfono especificado",
@@ -1426,23 +1426,34 @@
   "news.filed.shareNews.button": "Enviar noticias",
   "news.initialOrganizationNewsItem.body": "¡El administrador [NOMBRE DE COMPAÑÍA] le da la bienvenida a la aplicación Doma!\nTrabajamos cada día para hacer más cómoda la convivencia en su comunidad. Estamos siempre a su disposición para responder a sus preguntas sobre el mantenimiento del edificio y proporcionar un informe detallado sobre el trabajo del administrador.\n\nCómo ponerse en contacto con nosotros:\n1. 1. Reporta nueva incidencia a través de la aplicación móvil: puede hacerlo en la sección ¨Incidencias¨.\n2. Llama al número del servicio de emergencias: +34 XXX XXX XXX, disponible 24/7.\n3. Llame a la oficina: +34 XXX XXX XXX, abierto [HORAS DE TRABAJO].\n4. Visite la oficina: [DIRECCIÓN Y HORAS DE TRABAJO].\n\nEn la aplicación, le enviaremos noticias importantes. Gracias por elegirnos ❤️",
   "news.initialOrganizationNewsItem.title": "Mensaje de su administrador de comunidad 📩",
-  "news.template.category.cleaning": "\uD83E\uDDF9 Limpieza",
-  "news.template.category.electricity": "\uD83D\uDCA1 Electricidad",
-  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricidad y ascensores",
-  "news.template.category.elevators": "\uD83D\uDED7 Ascensor",
-  "news.template.category.gas": "♨\uFE0F  Gas",
-  "news.template.category.heating": "\uD83C\uDF21\uFE0F Calefacción",
-  "news.template.category.intercom": "\uD83D\uDD22 Interfono",
-  "news.template.category.meters": "⏱\uFE0F Contadores",
-  "news.template.category.other": "\uD83C\uDFE0 Otros",
-  "news.template.category.snow": "❄\uFE0F Nieve",
-  "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
-  "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
-  "news.template.category.water": "\uD83D\uDCA7 Agua",
-  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB protección contra incendios",
+  "news.template.category.cleaning": "🧹 Limpieza",
+  "news.template.category.electricity": "💡 Electricidad",
+  "news.template.category.electricityAndElevators": "💡 Electricidad y ascensores",
+  "news.template.category.elevators": "🛗 Ascensor",
+  "news.template.category.fireProtection": "👨🏻 protección contra incendios",
+  "news.template.category.gas": "♨️  Gas",
+  "news.template.category.heating": "🌡️ Calefacción",
+  "news.template.category.intercom": "🔢 Interfono",
+  "news.template.category.meters": "⏱️ Contadores",
+  "news.template.category.other": "🏠 Otros",
+  "news.template.category.snow": "❄️ Nieve",
+  "news.template.category.telephone": "📞 Teléfono",
+  "news.template.category.utilities": "💡 Todos servicios",
+  "news.template.category.water": "💧 Agua",
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
+  "notification.UserMessagesList.emptyList": "Aún no hay notificaciones",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Nuevo pase de entrada",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Nuevo comentario de ticket",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "Nuevo ticket",
+  "notification.UserMessagesList.newMessagePageTitle": "Nueva notificación",
+  "notification.UserMessagesList.title": "Notificaciones",
+  "notification.UserMessagesList.viewed": "Visto",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Sobre nuevos pases de acceso",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "Sobre nuevos comentarios de tickets",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "Sobre nuevos tickets",
+  "notification.UserMessagesSettingModal.title": "¿Qué tipo de notificaciones quieres ver?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Apertura de cuenta corriente de la comunidad",
@@ -1497,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "Es hora de actualizar 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Abrir pase",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
@@ -1769,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "La página ha sido eliminada o nunca ha existido",
   "pages.condo.error.NotFoundTitle": "Página no encontrada",
   "pages.condo.error.PageTitle": "Mejorando servicio",
-  "pages.condo.error.TooManyRequestsTitle": "El acceso se restablecerá pronto",
   "pages.condo.error.TooManyRequestsDescription": "Hay demasiadas solicitudes desde tu dirección IP, por lo que hemos restringido el acceso. Se restablecerá automáticamente en {resetTime}. Espera por favor",
   "pages.condo.error.TooManyRequestsErrorCode": "Si el acceso no se restablece, contacta con el soporte técnico e informa del código de error 429.",
+  "pages.condo.error.TooManyRequestsTitle": "El acceso se restablecerá pronto",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
