--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "Вы не можете указать разные электронные почты",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "Вы не можете указать разные номера телефонов",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Недействительный токен",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Не удалось выполнить операцию",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Пожалуйста, заполните обязательные поля",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Чтобы иметь возможность войти по номеру телефона, вам необходимо войти в свою учетную запись, используя подтвержденный адрес электронной почты",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Чтобы иметь возможность войти по почте, вам необходимо войти в свою учетную запись, используя подтвержденный номер телефона",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Недействительный токен",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Не удалось выполнить операцию",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Неверный телефон или пароль",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Не найден действительный токен на изменение пароля",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Не удалось найти пользователя с указанным телефоном",
@@ -1426,23 +1426,34 @@
   "news.filed.shareNews.button": "Отправить новость",
   "news.initialOrganizationNewsItem.body": "Управляющая компания [название УК] рада приветствовать вас в приложении Doma!\nКаждый день мы работаем, чтобы ваша жизнь в доме была комфортной. Наши сотрудники готовы оперативно решать любые вопросы: о содержании дома, придомовой территории и работе управляющей компании.\n\nКак связаться с нами:\n1. Отправить заявку из мобильного приложения: сделать это можно в разделе «Заявки».\n2. Набрать номер аварийно-диспетчерской службы: +7 000 000 0000 — работает круглосуточно.\n3. Позвонить в офис управляющей компании: +7 000 000 0000  — работаем [РЕЖИМ РАБОТЫ].\n4. Прийти в офис управляющей компании: [АДРЕС И РЕЖИМ РАБОТЫ ОФИСА].\n\nВ приложении мы будем делиться с вами важными новостями. Спасибо, что выбрали нас ❤️",
   "news.initialOrganizationNewsItem.title": "Письмо управляющей компании 📩",
-  "news.template.category.cleaning": "\uD83E\uDDF9 Уборка",
-  "news.template.category.electricity": "\uD83D\uDCA1 Электроэнергия",
-  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Электроэнергия и лифты",
-  "news.template.category.elevators": "\uD83D\uDED7 Лифты",
-  "news.template.category.gas": "♨\uFE0F  Газ",
-  "news.template.category.heating": "\uD83C\uDF21\uFE0F Отопление",
-  "news.template.category.intercom": "\uD83D\uDD22 Домофон",
-  "news.template.category.meters": "⏱\uFE0F Счетчики",
-  "news.template.category.other": "\uD83C\uDFE0 Другое",
-  "news.template.category.snow": "❄\uFE0F Снег",
-  "news.template.category.telephone": "\uD83D\uDCDE Телефон",
-  "news.template.category.utilities": "\uD83D\uDCA1 Все коммунальные услуги",
-  "news.template.category.water": "\uD83D\uDCA7 Вода",
-  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
+  "news.template.category.cleaning": "🧹 Уборка",
+  "news.template.category.electricity": "💡 Электроэнергия",
+  "news.template.category.electricityAndElevators": "💡 Электроэнергия и лифты",
+  "news.template.category.elevators": "🛗 Лифты",
+  "news.template.category.fireProtection": "👨🏻 Противопожарное",
+  "news.template.category.gas": "♨️  Газ",
+  "news.template.category.heating": "🌡️ Отопление",
+  "news.template.category.intercom": "🔢 Домофон",
+  "news.template.category.meters": "⏱️ Счетчики",
+  "news.template.category.other": "🏠 Другое",
+  "news.template.category.snow": "❄️ Снег",
+  "news.template.category.telephone": "📞 Телефон",
+  "news.template.category.utilities": "💡 Все коммунальные услуги",
+  "news.template.category.water": "💧 Вода",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.UserMessagesList.emptyList": "Пока уведомлений нет",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Оформлен пропуск",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Новый комментарий",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "Новая заявка",
+  "notification.UserMessagesList.newMessagePageTitle": "Новое уведомление",
+  "notification.UserMessagesList.title": "Уведомления",
+  "notification.UserMessagesList.viewed": "Просмотренные",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Об оформленных пропусках",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "О новых комментариях",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "О новых заявках",
+  "notification.UserMessagesSettingModal.title": "Какие уведомления показывать?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
@@ -1497,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "Пора обновиться 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Открыть пропуска",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
@@ -1769,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "Страница удалена или её никогда не существовало",
   "pages.condo.error.NotFoundTitle": "Страница не найдена",
   "pages.condo.error.PageTitle": "Улучшаем сервис",
-  "pages.condo.error.TooManyRequestsTitle": "Скоро доступ восстановится",
   "pages.condo.error.TooManyRequestsDescription": "С вашего IP-адреса поступает слишком много запросов, поэтому мы ограничили доступ. Он автоматически восстановится в {resetTime}. Пожалуйста, подождите.",
   "pages.condo.error.TooManyRequestsErrorCode": "Если доступ не восстановится, обратитесь в техподдержку и сообщите код ошибки — 429.",
+  "pages.condo.error.TooManyRequestsTitle": "Скоро доступ восстановится",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
