--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1438,7 +1438,7 @@
   "news.template.category.other": "🏠 Otros",
   "news.template.category.snow": "❄️ Nieve",
   "news.template.category.telephone": "📞 Teléfono",
-  "news.template.category.utilities": "💡 Todos servicios",
+  "news.template.category.utilities": "💡 Electricidad, agua, ascensores",
   "news.template.category.water": "💧 Agua",
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
