--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1438,7 +1438,7 @@
   "news.template.category.other": "🏠 Другое",
   "news.template.category.snow": "❄️ Снег",
   "news.template.category.telephone": "📞 Телефон",
-  "news.template.category.utilities": "💡 Все коммунальные услуги",
+  "news.template.category.utilities": "💡 Электроэнергия, вода, лифты",
   "news.template.category.water": "💧 Вода",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
