--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -375,10 +375,12 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "El medidor con el mismo número de cuenta existe en la organización actual en la propiedad {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "El contador con el mismo número y recurso existe en la organización actual y está vinculado con el número de cuenta {accountNumbersCsv}",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "La fecha de lectura ({givenDate}) no puede ser del futuro",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "La fecha de transmisión de la lectura ({givenDate}) no debe ser posterior al final del período de lectura especificado ({notifyEndDay} el día de cada mes)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Fin de período sólo puede tener un valor entre 1 y 31",
   "api.meter.meterReportingPeriod.INVALID_START": "El inicio del período sólo puede tener un valor entre 1 y 31",
+  "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "El final de la prohibición de testificar solo puede tener un valor de 1 a 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Se requiere una organización para crear un periodo de envío de lecturas",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "Esta comunidad no existe en la organizacion",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Se ha especificado una cuenta personal incorrecta",
@@ -2121,7 +2123,16 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "El final del período debe ser mayor que el principio del período",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "día de cada mes incluido",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Para todas las comunidades",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Configuración de restricciones",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Hasta el final del período",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Sin límites",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Permitir lecturas de medidores",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Después del día {notifyEndDay} y hasta el final del mes, no se aceptarán lecturas. Los residentes podrán entregarlos a partir del 1 del próximo mes.",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "Con esta configuración, los residentes no pueden transmitir lecturas después del final del período y hasta principios del próximo mes. Ha especificado un período de entrega que comienza en uno y termina en el próximo mes, por lo que no funcionará establecer un límite.",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Vecinos recibirán aviso para limitar plazo de entrega de medidores",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Este período será válido para todas las casas que no tengan un período con una dirección específica",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Crear período",
   "pages.condo.meter.reportingPeriod.create.start": "Inicio del período",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "El período se eliminará de forma permanente.",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "¿Eliminar período?",
@@ -2344,6 +2355,8 @@
   "pages.condo.property.type.village": "Urbanización de chalets",
   "pages.condo.property.unit.Name": "Nombre",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Esto no parece ser la dirección de la casa. Asegúrese de que ha introducido todo correctamente.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Anteriormente, el período fue elegido para todas las casas. Puede cambiarlo en la sección «Período de declaración» después de crear la casa.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "El período de lectura se configura automáticamente de {notifyStartDay} a {notifyEndDay} fecha",
   "pages.condo.property.warning.modal.HelpMessage": "La información de la comunidad no se guardará si abandona la página. Guarde los cambios o continúe editando la información de la comunidad cerrando este mensaje.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Los nombres de las plazas de coches deben ser únicos",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Ya se ha añadido una comunidad con esta dirección a la organización",
